--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-dom": "^17.0.11",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
-    "typescript": "4.6.2"
+    "typescript": "^4.6.2"
   }
 }
