--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/react-dom": "^17.0.11",
+    "js-cookie": "^3.0.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
